--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,20 +34,19 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+$base-color: #000000;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background: #fff;
-$background-alt: #f2f2f5;
+$background: rgb(255, 255, 255);
+$background-alt: #eeeeee;
 
 // Define border colors
-$border: #dcd9d9;
+$border: #bbbbbb;
 
 // Define text colors
-$heading: #374054;
-$text: #74808a;
-
+$heading: #000000;
+$text: #000000;
 /*
     ---------------------
     ----- 2. Mixins -----
